Archive2/61/5f36da91baa043/output
main.cpp:8:72: error: expected ')'
        static_assert(std::is_same<decltype(T::foo(std::declval<int>()), int>::value, "ERROR STRING");
                                                                       ^
main.cpp:8:44: note: to match this '('
        static_assert(std::is_same<decltype(T::foo(std::declval<int>()), int>::value, "ERROR STRING");
                                           ^
main.cpp:8:102: error: expected '>'
        static_assert(std::is_same<decltype(T::foo(std::declval<int>()), int>::value, "ERROR STRING");
                                                                                                     ^
2 errors generated.
